Updated Github Actions workflow and file

--- a/src/job.yml
+++ b/src/job.yml
@@ -1,15 +1,13 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 code: model
 command: >-
-  python 
-  --
-  --
+  python train.py --lr ${{inputs.reg_rate}} --training-data ${{inputs.training_data}}
 inputs:
   training_data: 
     type: uri_folder 
-    path: 
+    path: azureml:diabetes-dev-folder:1
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: 
-experiment_name: 
-description: 
+compute: cn-ml-demo
+experiment_name: diabetes-mlops-demo-exp
+description: Test MLOps
