Updated compute to aml-cluster

--- a/src/job.yml
+++ b/src/job.yml
@@ -8,6 +8,6 @@ inputs:
     path: azureml:diabetes-dev-folder:1
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: cn-ml-demo
+compute: aml-cluster
 experiment_name: diabetes-mlops-demo-exp
 description: Test MLOps
