--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -2,6 +2,11 @@ name: Manually trigger an Azure Machine Learning job
 
 on:
   workflow_dispatch:
+  push:
+    paths-ignore:
+      - '.github/workflows/**'
+    branches:
+      - main
 
 jobs:
   train:
