--- a/.github/workflows/04-code-checks.yml
+++ b/.github/workflows/04-code-checks.yml
@@ -19,9 +19,12 @@ jobs:
         python-version: '3.8'
     - name: Install Flake8
       run: |
-        python -m pip install flake8
+        python -m pip install flake8 pytest
     - name: Run linting tests
       run: | 
         flake8 src/model/
+    - name: Run unit tests
+      run: | 
+        pytest tests/
 
 
