--- a/.github/workflows/04-code-checks.yml
+++ b/.github/workflows/04-code-checks.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.8'
-    - name: Install Flake8
+    - name: Install dependencies
       run: |
-        python -m pip install flake8 pytest
+        python -m pip install -r requirements.txt
     - name: Run linting tests
       run: | 
         flake8 src/model/
