--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -9,7 +9,8 @@ on:
       - main
 
 jobs:
-  train:
+  dev:
+    environment: dev
     runs-on: ubuntu-latest
     steps:
     - name: Check out repo
@@ -21,7 +22,23 @@ jobs:
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Trigger Job
-      run: az ml job create --file src/job.yml --resource-group ${{secrets.AZURE_ML_RG}} --workspace-name ${{secrets.AZURE_ML_WORKSPACE}}
+      run: az ml job create --file src/job.yml --resource-group ${{secrets.AZURE_ML_RG}} --workspace-name ${{secrets.AZURE_ML_WORKSPACE}} --stream
+  prod:
+    needs: dev
+    environment: prod
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out repo
+      uses: actions/checkout@main
+    - name: Install az ml extension
+      run: az extension add -n ml -y
+    - name: Azure login
+      uses: azure/login@v1
+      with:
+        creds: ${{secrets.AZURE_CREDENTIALS}}
+    - name: Trigger Job
+      run: az ml job create --file src/job-prod.yml --resource-group ${{secrets.AZURE_ML_RG}} --workspace-name ${{secrets.AZURE_ML_WORKSPACE}}
    
+
 
 
