--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -37,8 +37,9 @@ jobs:
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Trigger Job
-      run: az ml job create --file src/job-prod.yml --resource-group ${{secrets.AZURE_ML_RG}} --workspace-name ${{secrets.AZURE_ML_WORKSPACE}}
-   
+      run: az ml job create --file src/job-prod.yml --resource-group ${{secrets.AZURE_ML_RG}} --workspace-name ${{secrets.AZURE_ML_WORKSPACE}} --stream
+    - name: Register Model
+      run: az ml model create --name diabetes-model --type mlflow_model
 
 
 
