--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -41,9 +41,9 @@ jobs:
 
     - name: Parse and store runId
       run: |
-        echo "run_id=$(awk '/RunId:/ {print \$2}' out.json)" >> $GITHUB_ENV
+        echo "run_id=$(awk '/RunId:/ {print $2;exit}' out.json)" >> $GITHUB_ENV
     - name: Register Model
-      run: az ml model create --name diabetes-model --type mlflow_model --path runs:/$run_id/model/ --workspace-name ${{secrets.AZURE_ML_WORKSPACE}}
+      run: az ml model create --name diabetes-model --type mlflow_model --path 'runs:/$run_id/model/' --workspace-name ${{secrets.AZURE_ML_WORKSPACE}}
 
 
 
