--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -40,10 +40,14 @@ jobs:
       run: az ml job create --file src/job-prod.yml --resource-group ${{secrets.AZURE_ML_RG}} --workspace-name ${{secrets.AZURE_ML_WORKSPACE}} --stream -o json > out.json
 
     - name: Parse and store runId
+      id: extract_runid
       run: |
-        echo "run_id=$(awk '/RunId:/ {print $2;exit}' out.json)" >> $GITHUB_ENV
+        runid_value=$(awk '/RunId:/ {print $2; exit}' out.json) 
+        echo "::set-output name=runid_value::$runid_value"
     - name: Register Model
-      run: az ml model create --name diabetes-model --type mlflow_model --path 'runs:/$run_id/model/' --workspace-name ${{secrets.AZURE_ML_WORKSPACE}}
+      run: |
+        echo "${{ steps.extract_runid.outputs.runid_value }}"
+        az ml model create --name diabetes-model --type mlflow_model --path 'runs:/${{ steps.extract_runid.outputs.runid_value }}/model/' --workspace-name ${{secrets.AZURE_ML_WORKSPACE}}
 
 
 
