--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -32,6 +32,9 @@ jobs:
       uses: actions/checkout@main
     - name: Install az ml extension
       run: az extension add -n ml -y
+    - name: Install dependencies
+      run: |
+        python -m pip install -r requirements.txt
     - name: Azure login
       uses: azure/login@v1
       with:
